--- a/index.html
+++ b/index.html
@@ -317,6 +317,10 @@
                     <li>Provided detailed and searchable information on the Indian Constitution, helping users easily navigate through complex legal topics.</li>
                     <li>Designed an intuitive, user-friendly interface to ensure smooth navigation and improved user experience across devices.</li>
                 </ul>
+                <a href="https://purnakam.github.io/LegalAid/" target="_blank" id="download-btn" class="download-btn">
+                    <i class="fas fa-gavel"></i>
+                    <span>LegalAid</span>
+                </a>
             </div>
         </div>
         
